/*
 * Copyright (c) 2020. Aberic - All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option go_package = "github.com/george/protocols/db";
option java_package = "cn.aberic.george.protocols.db";
option java_outer_classname = "DiskProto";

package db;

// 请求插入数据
message RequestDiskInto {
  // 数据库名称
  string database_name = 1;
  // 视图名称
  string view_name = 2;
  string key = 3;
  bytes value = 4;
}

// 请求获取数据
message RequestDiskOut {
  // 数据库名称
  string database_name = 1;
  // 视图名称
  string view_name = 2;
  string key = 3;
}

// 请求获取数据
message RequestDiskIOut {
  // 数据库名称
  string database_name = 1;
  // 视图名称
  string view_name = 2;
  // 索引名称
  string index_name = 3;
  string key = 4;
}

// 返回获取数据
message ResponseDiskOut {
  bytes value = 1;
}

// 请求删除数据
message RequestDiskRemove {
  // 数据库名称
  string database_name = 1;
  // 视图名称
  string view_name = 2;
  string key = 3;
}

// 请求查询数据
message RequestDiskSelect {
  // 数据库名称
  string database_name = 1;
  // 视图名称
  string view_name = 2;
  // 选择器字节数组，自定义转换策略
  bytes constraint_json_bytes = 3;
}

// 返回查询数据
message ResponseDiskSelect {
  /// total 检索过程中遍历的总条数（也表示文件读取次数，文件描述符次数远小于该数，一般文件描述符数为1，即共用同一文件描述符）
  uint64 total = 1;
  /// 检索结果过程中遍历的总条数
  uint64 count=2;
  ///  使用到的索引名称，如果没用上则为空
  string index_name=3;
  /// 索引是否顺序
  bool asc=4;
  /// values 检索结果集合
  repeated bytes values=6;
}

// 请求删除数据
message RequestDiskDelete {
  // 数据库名称
  string database_name = 1;
  // 视图名称
  string view_name = 2;
  // 选择器字节数组，自定义转换策略
  bytes constraint_json_bytes = 3;
}

// 返回删除数据
message ResponseDiskDelete {
  /// total 检索过程中遍历的总条数（也表示文件读取次数，文件描述符次数远小于该数，一般文件描述符数为1，即共用同一文件描述符）
  uint64 total = 1;
  /// 检索结果过程中遍历的总条数
  uint64 count=2;
  ///  使用到的索引名称，如果没用上则为空
  string index_name=3;
  /// 索引是否顺序
  bool asc=4;
  /// values 检索结果集合
  repeated bytes values=6;
}
